manipular objetos. rebote de pelota. agrandado de canvas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <canvas id='canvas' class='pongCanvas'></canvas>
+        <canvas id='canvas' class='pongCanvas' width='900' height='450'></canvas>
         <script src='pongo.js'></script>
     </body>
 </html>
