--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <canvas id='canvas' class='pongCanvas' width='900' height='450'></canvas>
-        <script src='pongo.js'></script>
+        <script type="module" src='pongo.js'></script>
     </body>
 </html>
