score written to firebase

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <title>Pongo</title>
         <link rel="stylesheet" href="style.css" />
+        <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-database.js"></script>
     </head>
     <body>
         <canvas id='canvas' class='pongCanvas' width='900' height='450'></canvas>
+        <input type='text' id='username'>
         <script type="module" src='pongo.js'></script>
     </body>
 </html>
